--- a/templates/mattermost/logrotate-nginx.j2
+++ b/templates/mattermost/logrotate-nginx.j2
@@ -1,10 +1,10 @@
-/var/log/nginx/*.log {
-	weekly
+/var/log/nginx/{{ mm_domain }}.log {
+	daily
+	rotate 3
+	notifempty
 	missingok
-	rotate 2
 	compress
 	delaycompress
-	notifempty
 	create 0640 www-data adm
 	sharedscripts
 	prerotate
@@ -15,4 +15,25 @@
 	postrotate
 		invoke-rc.d nginx rotate >/dev/null 2>&1
 	endscript
+    shred
+}
+/var/log/nginx/{{ mm_domain }}.err {
+	daily
+	rotate 3
+	notifempty
+    size 5k
+	missingok
+	compress
+	delaycompress
+	create 0640 www-data adm
+	sharedscripts
+	prerotate
+		if [ -d /etc/logrotate.d/httpd-prerotate ]; then \
+			run-parts /etc/logrotate.d/httpd-prerotate; \
+		fi \
+	endscript
+	postrotate
+		invoke-rc.d nginx rotate >/dev/null 2>&1
+	endscript
+    shred
 }
